#[build-system]
#requires = ["setuptools>=75.1.0", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "JobFunnel"
dynamic = ["version"]
description = "Automated tool for scraping job postings."
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    { name = "Paul McInnis", email = "paulmcinnis99@gmail.com" },
    { name = "Bradley Kohler" },
    { name = "Jose Alarcon" },
    { name = "Erich Mengore" },
    { name = "Mark van der Broek" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4 (>=4.13.3)",
    "lxml (>=5.3.1)",
    "requests (>=2.32.3)",
    "python-dateutil (>=2.9.0.post0)",
    "PyYAML (>=6.0.2)",
    "scikit-learn (>=1.6.1)",
    "nltk (>=3.9.1)",
    "scipy (>=1.15.2)",
    "selenium (>=4.29.0)",
    "webdriver-manager (>=4.0.2)",
    "Cerberus (>=1.3.7)",
    "tqdm (>=4.67.1)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.4)",
    "pytest-mock (>=3.14.0)",
    "pytest-cov",
    "flake8",
    "isort (>=6.0.0)",
    "black (>=25.1.0)",
    "pre-commit (>=4.1.0)",
]

[project.urls]
Homepage = "https://github.com/PaulMcInnis/JobFunnel"
Documentation = "https://github.com/PaulMcInnis/JobFunnel/docs"
Repository = "https://github.com/PaulMcInnis/JobFunnel"
Issues = "https://github.com/PaulMcInnis/JobFunnel/issues"

[project.scripts]
funnel = "jobfunnel.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "jobfunnel.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "docs", "images"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = "--cov=jobfunnel"

[tool.black]
line-length = 88
include = '\.pyi?$'  # This will include all .py and .pyi files

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["beautifulsoup4", "lxml", "requests", "python-dateutil", "PyYAML", "scikit-learn", "nltk", "scipy", "selenium", "webdriver-manager", "Cerberus", "tqdm"]
known_first_party = ["jobfunnel"]
default_section = "THIRDPARTY"
force_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.poetry]
name = "JobFunnel"
version = "3.1"
description = "Automated tool for scraping job postings."
readme = "readme.md"
license = "MIT"
authors = ["Paul McInnis"]

[tool.poetry.dependencies]
python = ">= 3.11"
beautifulsoup4 = ">=4.13.3"
lxml = ">=5.3.1"
requests = ">=2.32.3"
python-dateutil = ">=2.9.0.post0"
PyYAML = ">=6.0.2"
scikit-learn = ">=1.6.1"
numpy = ">= 1.17 < 2.0"
nltk = ">=3.9.1"
scipy = ">=1.15.2"
selenium = ">=4.29.0"
webdriver-manager = ">=4.0.2"
Cerberus = ">=1.3.7"
tqdm = ">=4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
